# MatrixMutiplicationTest

./: .gitignore  CMakeLists.txt
result/nsight_systems/: basic_matrix_multiplication.nsys-rep  tiled_matrix_multiplication.nsys-rep
src/: basicMmul.cu  tiledMmul.cu
